[package]

name = "stopwatch"
version = "0.1.0"
authors = ["Chucky Ellison <cme@freefour.com>", "Joël Lupien <jojolepro@jojolepro.com"]

description = "A stopwatch library for timing things."
repository = "https://github.com/ellisonch/rust-stopwatch"
readme = "README.md"
keywords = ["stopwatch", "timing"]
license = "MIT"

[dependencies]
num = "0.3.0"
