[package]
name = "stopwatch2"
version = "2.0.0"
authors = ["Chucky Ellison <cme@freefour.com>", "Joël Lupien <jojolepro@jojolepro.com"]
description = "A stopwatch library for timing things. A rewrite and simplification of the original stopwatch crate."
repository = "https://github.com/jojolepro/rust-stopwatch"
documentation = "https://docs.rs/stopwatch2"
edition = "2018"
exclude = ["doc"]
readme = "README.md"
keywords = ["stopwatch", "timing"]
license = "MIT"

